src/infrastructure-deployment/service-deployments/aks-network-setup/ingress.deployment.yaml
# ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8s-assign-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /crypto-wrapper/(.*)
        pathType: Prefix
        backend:
          service:
            name: crypto-wrapper
            port:
              number: 80
      - path: /simple-server
        pathType: Prefix
        backend:
          service:
            name: simple-server
            port:
              number: 80
